k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-landing-svc
  namespace: landing
spec:
  selector:
    app: order-landing
  ports:
    - name: order-landing
      port: 80
      targetPort: 80
